# my-claw-code

./: .env.example  .gitignore  README.md
.agent/: gsd-file-manifest.json
.kiro/steering/: desktop-extension-pattern.md  desktop-reuse-core.md
.master-context/: patch_1775113619623.txt  patch_1775117243716.txt  patch_1775117565867.txt
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
claw-desktop/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  LOGGING.md  README.md  SETUP.md  TEMPLATE_UI.md  UI_DESIGN.md  index.html  package-lock.json  package.json
claw-desktop/src/: App.css  App.tsx  index.css
claw-desktop/src-tauri/: Cargo.toml  tauri.conf.json
claw-desktop/src-tauri/capabilities/: default.json
claw-desktop/src-tauri/icons/: icon.icns
claw-desktop/src-tauri/src/: lib.rs  main.rs
claw-desktop/src-tauri/src/adapters/inbound/: commands.rs  dtos.rs  git_commands.rs  mod.rs  skills_commands.rs
claw-desktop/src-tauri/src/adapters/outbound/: api_client.rs  file_repository.rs  mod.rs  prompt_registry.rs  pty_executor.rs  tauri_prompter.rs  tauri_publisher.rs  tool_executor.rs
claw-desktop/src-tauri/src/core/domain/: default_providers.json  events.rs  logging_helpers.rs  mod.rs  session_metadata.rs  settings.rs  types.rs
claw-desktop/src-tauri/src/core/use_cases/: chat_actor.rs  mod.rs  ports.rs
claw-desktop/src-tauri/src/setup/: app_state.rs  di_container.rs  logging.rs  mod.rs  session_logger.rs
claw-desktop/src/adapters/tauri/: index.ts  tauri-chat.gateway.ts  tauri-settings.gateway.ts
claw-desktop/src/components/: CodeBlock.tsx  LanguageSelector.tsx  MarkdownContent.tsx  ResizablePanel.tsx  TitleBar.tsx  Toast.tsx  ToastContainer.tsx
claw-desktop/src/components/ui/: ai-thinking-indicator.tsx  custom-dropdown.tsx  input.tsx
claw-desktop/src/core/entities/: Message.ts  PermissionRequest.ts  SessionMetadata.ts  Settings.ts  Skill.ts  StreamEvent.ts  WorkMode.ts  index.ts
claw-desktop/src/core/gateways/: IChatGateway.ts  ISettingsGateway.ts  index.ts
claw-desktop/src/i18n/: config.ts  index.ts
claw-desktop/src/i18n/locales/: en.json  vi.json
claw-desktop/src/lib/: parseThinking.ts  useTextMeasurement.ts
claw-desktop/src/store/: chat.machine.ts  index.ts  useChatStore.ts  useGitStore.ts  useRightPanelStore.ts  useSettingsStore.ts  useSkillStore.ts  useTerminalStore.ts  useToastStore.ts
claw-desktop/src/ui/blocks/: AskUserQuestionBlock.tsx  BashBlock.tsx  CompactBlock.tsx  ContextGeneratorBlock.tsx  DelegationBlock.tsx  DirectoryListBlock.tsx  FileOperationBlock.tsx  LSPBlock.tsx  REPLBlock.tsx  SearchResultBlock.tsx  ThinkingBlock.tsx  TodoListBlock.tsx  ToolExecutionBlock.tsx  WebSearchBlock.tsx  XTermBlock.tsx  index.ts  renderToolBlock.tsx  useTerminalStream.ts  xterm-custom.css
claw-desktop/src/ui/features/: ChatInput.tsx  ConfirmDeleteDialog.tsx  ErrorBanner.tsx  MessageFooter.tsx  MessageList.tsx  ModelSelector.tsx  PermissionModal.tsx  SessionItem.tsx  SessionList.tsx  SkillSelector.tsx  TokenCounter.tsx  index.ts
claw-desktop/src/ui/features/rightpanel/: GitView.tsx  RightPanel.tsx  TerminalView.tsx  index.ts
claw-desktop/src/ui/features/rightpanel/git/: ConfirmDialog.tsx  GitCommitBar.tsx  GitDiffViewer.tsx  GitFileItem.tsx  GitFileList.tsx  GitFilterBar.tsx  GitHeader.tsx  GitNoRepository.tsx
claw-desktop/src/ui/features/settings/: AISettingsTab.tsx  AntigravitySetup.tsx  ApiKeyWarning.tsx  CompactSettingsSection.tsx  ConfirmDeleteProviderDialog.tsx  ContextSettingsTab.tsx  GeneralSettingsTab.tsx  KiloModelsBrowser.tsx  ModelFormDialog.tsx  ModelsBrowser.tsx  ProviderFormDialog.tsx  SkillsSettingsTab.tsx  SkillsStoreTab.tsx  fetchAntigravityModels.ts  fetchKiloModels.ts  fetchModels.ts
claw-desktop/src/ui/features/terminal/: TerminalPanel.tsx  TerminalTab.tsx  index.ts
claw-desktop/src/ui/pages/: OnboardingScreen.tsx  SettingsScreen.tsx
claw-desktop/src/ui/pages/onboarding/: OnboardingScreen.tsx  types.ts
claw-desktop/src/ui/pages/onboarding/components/: AntigravitySetupComponent.tsx  ApiKeyInput.tsx  ModelCard.tsx  ProgressIndicator.tsx  ProviderCard.tsx
claw-desktop/src/ui/pages/onboarding/steps/: ModelSelectionStep.tsx  ProviderSelectionStep.tsx  ProviderSetupStep.tsx  WelcomeStep.tsx
extensions/: Cargo.toml  NVIDIA_SETUP.md  README.md  preflight.rs
extensions/src/: lib.rs  realtime_tool_events.rs
rust/: Cargo.toml
rust/crates/api/src/: client.rs  lib.rs  runtime_helpers.rs  types.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
rust/crates/claw-cli/src/: main.rs
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: lib.rs
rust/crates/lsp/src/: client.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  compact.rs  conversation.rs  edit_replacers.rs  file_ops.rs  hooks.rs  lib.rs  mcp_stdio.rs  prompt.rs  session.rs
rust/crates/skills/: Cargo.toml  README.md
rust/crates/skills/src/: error.rs  github.rs  installer.rs  lib.rs  lockfile.rs  registry.rs  store.rs  types.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: context_generator.rs  context_models.rs  lib.rs
tasks/: race-condition-fix-plan.md  session-restructure-plan.md
