[package]
name = "claw-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Thư viện xử lý bất đồng bộ (Rất quan trọng cho streaming AI)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# UUID cho permission request IDs
uuid = { version = "1", features = ["v4"] }
# Đọc .env file
dotenvy = "0.15"
# Date/time for system prompt (with serde support)
chrono = { version = "0.4", features = ["serde"] }
# Crossbeam for channel-based cancellation
crossbeam-channel = "0.5"
# Portable PTY for real terminal emulation
portable-pty = "0.8"
# Dirs for home directory
dirs = "5"
# HTTP client for fetching external data
reqwest = { version = "0.12", features = ["json"] }
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
# Git library (libgit2 binding)
git2 = "0.18"
# File system watcher for git changes
notify = "6"
notify-debouncer-full = "0.3"

# --- Claw Code Core Dependencies ---
# Link trực tiếp tới các module Rust của project
api = { path = "../../rust/crates/api" }
runtime = { path = "../../rust/crates/runtime" }
tools = { path = "../../rust/crates/tools" }
commands = { path = "../../rust/crates/commands" }
plugins = { path = "../../rust/crates/plugins" }

# Windows API for console management (hide console window)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }


