[package]
name = "commands"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
