[package]
name = "skills"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
walkdir = "2.5"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi"] }
